--- a/Makefile.master
+++ b/Makefile.master
@@ -94,6 +94,7 @@ BUILD_DIR = build
 VPATH = $(LIB_DIRS)
 
 # Macros derived from boards.txt
+VARIANT := $(shell sed -n 's/$(BOARD)\.build\.variant=\(.*\)/\1/p' < $(ARD_BOARDS))
 MCU := $(shell sed -n 's/$(BOARD)\.build\.mcu=\(.*\)/\1/p' < $(ARD_BOARDS))
 F_CPU := $(shell sed -n 's/$(BOARD)\.build\.f_cpu=\(.*\)/\1/p' < $(ARD_BOARDS))
 UPLOAD_SPEED := \
@@ -115,7 +116,7 @@ LN = ln -f
 
 # Compiler flags.
 INC_FLAGS = \
-    $(addprefix -I,$(INC_DIRS)) $(addprefix -I,$(LIB_DIRS)) -I$(ARD_SRC_DIR)
+    $(addprefix -I,$(INC_DIRS)) $(addprefix -I,$(LIB_DIRS)) -I$(ARD_SRC_DIR) -I$(ARD_HOME)/hardware/arduino/variants/$(VARIANT)
 ARD_FLAGS = -mmcu=$(MCU) -DF_CPU=$(F_CPU) -DARDUINO=$(ARD_REV)
 C_CXX_FLAGS = \
     -Wall -Wextra -Wundef -Wno-unused-parameter \
@@ -215,7 +216,7 @@ $(BUILD_DIR) :
 	$(MKDIR) $@
 
 $(SKT_PDE_OBJ) : $(SKT_PDE_SRC)
-	echo '#include <WProgram.h>' > $(BUILD_DIR)/$(SKETCH)_pde.cpp
+	echo '#include <Arduino.h>' > $(BUILD_DIR)/$(SKETCH)_pde.cpp
 	echo '#include "$(SKT_PDE_SRC)"' >> $(BUILD_DIR)/$(SKETCH)_pde.cpp
 	$(LN) $(SKT_PDE_SRC) $(BUILD_DIR)/$(SKT_PDE_SRC)
 	cd $(BUILD_DIR) && $(CXX) -c $(subst build/,,$(CXX_FLAGS)) \
@@ -256,7 +257,7 @@ $(IMAGE).hex : $(ARD_AR_OBJ) $(LIB_AR_OBJ) $(SKT_AR_OBJ) $(SKT_PDE_OBJ)
 upload : all
 	- pkill -f '$(MON_CMD).*$(PORT)'
 	- sleep 1
-	- stty -f $(PORT) hupcl
+	- stty -F $(PORT) hupcl
 	- $(AVRDUDE) -V -C$(AVRDUDE_CONF) -p$(MCU) -c$(PROGRAMMER) \
 	  -P$(PORT) -b$(UPLOAD_SPEED) -D -Uflash:w:$(IMAGE).hex:i
 
